Add css animation effect to the heading

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,25 @@ html, body {
   opacity: 1;
 }
 
+.shadow-dance-text {
+  font-size: 3rem;
+  color: #4A90E2; /* Your existing blue */
+  text-align: center;
+  margin: 0;
+  text-shadow: 3px 3px 0 #F1C40F, 6px 6px 0 #E74C3C;
+  animation: shadow-dance 2s infinite ease-in-out;
+}
+
+@keyframes shadow-dance {
+  0%, 100% {
+    text-shadow: 3px 3px 0 #F1C40F, 6px 6px 0 #E74C3C;
+  }
+  50% {
+    text-shadow: -3px -3px 0 #E74C3C, -6px -6px 0 #F1C40F;
+  }
+}
+
+
 body.dark .tooltip {
   color: #fff;
 }
