Make only the task text appear "checked"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -276,10 +276,11 @@ ul li:hover {
   background: #eee;
 }
 
-ul li.checked {
+ul li.checked .task-text {
   text-decoration: line-through;
   color: #27AE60;
 }
+
 
 /* Delete Button */
 .close {
